# rf-signal-intelligence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  load_data.ipynb  pyproject.toml  pytest.ini  rnn_lstm_w_SNR.keras_stats.json  setup.py
DeepLearning/: ganRFML_LoadGenAndPredict_OSIL.py
DeepLearning_src/: LSTM_RNN_128_from_scratch_3.ipynb  ganRFML_LoadGenerateAndPredict.py  ganRFML_preSNRcondition_perSNR.py
RNN/: BaseModulationClassifier.py  CommonVars.py  ConvLSTM_FFT_Power_SNR.py  ConvLSTM_IQ_FFT_Power_SNR.py  ConvLSTM_IQ_SNR.py  ConvLSTM_IQ_SNR_k7_k3.py  ConvLSTM_SNR_BW.py  PlotConfusionMatrix.ipynb  RNN_lstm.py  RNN_lstm_multifeature_2.py  RNN_lstm_multifeature_3.py  RNN_lstm_multifeature_4.py  RNN_lstm_multifeature_5.py  RNN_lstm_w_SNR.py  RNN_lstm_w_SNR_cont.py  SignalUtils.py  rnn_ADAM_LR_0p0001.h5_stats.json  rnn_lstm_multifeature_2.keras_stats.json  rnn_lstm_multifeature_3.py  rnn_lstm_multifeature_5.keras_stats.json  rnn_lstm_multifeature_5.py  rnn_lstm_multifeature_generic.keras_stats.json  rnn_lstm_multifeature_generic.py  rnn_lstm_w_SNR.h5_stats.json  rnn_lstm_w_SNR.keras_stats.json  rnn_lstm_w_SNR.py  rnn_lstm_w_SNR_batch.h5_stats.json  setup.py
archive/: README.md
configs/: additional_datasets_registry.yaml  data_registry.yaml  deepradar2022_eval.yaml  evaluation_comparison.yaml  model_registry.yaml  noisy_drone_vgg.yaml  rml2016_eval.yaml  rml2018_eval.yaml
deploy/: build_tensorrt_engine.sh  nsight_profile.sh  run_jetson_inference.py  run_tensorrt_engine_inference.py  run_tensorrt_engine_inference.sh  run_trtexec_benchmark.sh
docker/: Dockerfile  Makefile  README.md
docs/: README.md  evaluation_protocols.md  jetson_tensorrt_deployment.md
exports/: export_noisy_drone_to_onnx.py  run_onnx_inference.py  validate_onnx.py
models/: README.md  rml2018_lstm_balanced.keras
notebooks/: 10_download_data.ipynb  20_signal_eda.ipynb  30_lstm_rml2016.ipynb  30_rml2016_rnn_lstm.ipynb  31_lstm_rml2018.ipynb  31_rml2018_lstm_rnn.ipynb  32_deepradar2022_lstm_rnn.ipynb  32_lstm_deepradar2022.ipynb  33_cnn_bilstm_noisy_drone_rf_v2.ipynb  33_vgg_spectrogram_noisy_drone_rf_v2.ipynb  34b_fast_high_snr_rfuav.ipynb  40_evaluation_rml2016.ipynb  40_model_evaluation_comparison.ipynb  40_rml2016_evaluation.ipynb  41_evaluation_rml2018.ipynb  42_deepradar2022_evaluation.ipynb  42_evaluation_deepradar2022.ipynb  43_evaluation_cross_dataset_ensemble.ipynb  44_evaluation_noisy_drone_rf_v2.ipynb  45_evaluation_rfuav.ipynb  50_evaluation_comparison.ipynb  50_model_evaluation_comparison.ipynb  63b_gan_drone_iq_generator.ipynb  README.md  RML2018a_LSTM_RNN.ipynb  deep_radar_lstm_rnn.ipynb  download_data.ipynb  evaluate_models.ipynb  load_env.ipynb  rml2016_rnn_lstm.ipynb  rnn_lstm.ipynb
outputs/: .gitkeep
pipelines/: 10_download_data.py  20_signal_eda.py  30_lstm_rml2016.py  31_lstm_rml2018.py  32_lstm_deepradar2022.py  33_vgg_spectrogram_noisy_drone_rf_v2.py  34b_fast_high_snr_rfuav.py  40_evaluation_rml2016.py  41_evaluation_rml2018.py  42_evaluation_deepradar2022.py  43_evaluation_cross_dataset_ensemble.py  44_evaluation_noisy_drone_rf_v2.py  45_evaluation_rfuav.py  50_evaluation_comparison.py  63b_gan_drone_iq_generator.py  README.md
results/: README.md
rfuav_metadata/: rfuav_centers.csv  rfuav_centers.json  rfuav_centers_summary.txt
scratch/: LSTM_RNN_128_from_scratch.ipynb  LSTM_RNN_128_from_scratch_2.ipynb  VAE_LSTM_RNN.ipynb  lstm_rnn_original.ipynb
scripts/: live_noisy_drone_gan_rf_classifier.py  live_noisy_drone_rf_classifier.py  live_rml2016_rf_classifier.py  noisy_drone_frame_classifier.py  noisy_drone_gateway_rx_classifier.py  noisy_drone_signal_generator.py  smoke_eval_registry.py  update_registry_checksums.py
tests/: AM_versus_Others.ipynb  ANR_testing.ipynb  Ensemble_RNN_LSTM_1v1.ipynb  Extended_Modulation_Classifier.ipynb  Kitchen_Sink_RandomForest_discrimination.ipynb  Modulation_Classifier.ipynb  PlotConfusionMatrix.ipynb  QAM16_QAM64_discrimination.ipynb  QAM64_v_QAM16_RF.ipynb  README.md  WBFM_AMDSB_Others.ipynb  WBFM_v_Other.ipynb  denoising_algos.ipynb  integration_policy.py  kernel_functions.ipynb  rnn_lstm.ipynb  rnn_lstm_RNN.ipynb  rnn_lstm_ensemble.ipynb  test_RandomForest.ipynb  test_cli_defaults.py  test_cli_imports.py  test_deployment_artifacts.py  test_docs_cards.py  test_high_snr_classification.py  test_legacy_imports.py  test_live_noisy_drone_gan.py  test_model_builders.py  test_multidataset_high_snr.py  test_noisy_drone_signal_generator.py  test_notebook_format.py  (+4 more)
(+299 files in other folders)
