[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_wireless_classification"
version = "0.1.0"
description = "ML Wireless Classification"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jacob Ramey", email = "rameyjm7@gmail.com" },
]
dependencies = [
  "scikit-learn",
  "tensorflow",
  "numpy",
  "matplotlib",
  "seaborn",
  "scipy",
  "PyWavelets",
  "PyYAML",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "h5py",
]
dev = [
  "ruff",
  "pylint",
  "pre-commit",
  "build",
  "twine",
]
gpu = [
  "tensorflow[and-cuda]>=2.16; platform_system == 'Linux'",
]

[project.scripts]
start = "ml_wireless_classification:create_app"
ml-wireless-classification = "ml_wireless_classification:main"
rfsi = "ml_wireless_classification.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = [
  "data",
  "docs",
  "models",
  "notebooks",
  "src/ml_wireless_classification/base",
  "src/ml_wireless_classification/legacy",
  "src/ml_wireless_classification/core/base_classifier.py",
  "src/ml_wireless_classification/models/rnn_lstm_with_snr.py",
  "src/ml_wireless_classification/__about__.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
