[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-signal-intelligence"
version = "0.1.0"
description = "RF Signal Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Jacob Ramey", email = "rameyjm7@gmail.com" },
]
dependencies = [
  "scikit-learn",
  "tensorflow",
  "numpy",
  "matplotlib",
  "seaborn",
  "scipy",
  "PyWavelets",
  "PyYAML",
  "requests",
  "websocket-client",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "h5py",
]
dev = [
  "ruff",
  "pylint",
  "pre-commit",
  "build",
  "twine",
]
noisy-drone = [
  "torch",
]
deploy = [
  "tf2onnx",
  "onnx",
  "onnxruntime",
]
gpu = [
  "tensorflow[and-cuda]>=2.16; platform_system == 'Linux'",
]
ml = [
  "torch",
]

[project.scripts]
start = "rf_signal_intelligence:create_app"
rf-signal-intelligence = "rf_signal_intelligence:main"
rfsi = "rf_signal_intelligence.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
exclude = [
  "data",
  "docs",
  "models",
  "pipelines",
  "src/rf_signal_intelligence/base",
  "src/rf_signal_intelligence/legacy",
  "src/rf_signal_intelligence/core/base_classifier.py",
  "src/rf_signal_intelligence/models/rnn_lstm_with_snr.py",
  "src/rf_signal_intelligence/__about__.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
